@@ -1,6 +1,6 @@
 Package: plm
 Version: 1.7-0
-Date: 2019-01-01
+Date: 2019-01-02
 Title: Linear Models for Panel Data
 Authors@R: c(person(given = "Yves",      family = "Croissant",    role = c("aut", "cre"), email = "yves.croissant@univ-reunion.fr"),
              person(given = "Giovanni",  family = "Millo",        role = "aut", email = "Giovanni.Millo@Generali.com"),
